@@ -3,6 +3,8 @@ Changelog
 
 5.2-dev - (unreleased)
 ----------------------
+* Feature: add HEAD method for zope3 browser views
+  [ichimdav #2316]
 * Cleanup: removed back ported HTML5 functionality from Plone 4.2
   [ghicaale refs #5346]
 * Bug fix: removed patch for Products.MaildropHost
